--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -5,6 +5,8 @@
         "description": "Brigid PACS",
         "pageNotFound": "Page Not Found",
         "pageNotFoundDesc": "The page you are looking for does not exist.",
+        "forbidden": "Forbidden",
+        "forbiddenDesc": "You are not authorized to access this page.",
         "goBackHome": "Go Back Home",
         "loading": "Loading...",
         "cancel": "Cancel",
