feat(i18n): add i18n support for `share-with-me` page

--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -332,6 +332,11 @@
         "noData": "No shared content yet.",
         "refresh": "Refresh"
     },
+    "shareWithMe": {
+        "title": "Share With Me",
+        "noData": "No shared content yet.",
+        "refresh": "Refresh"
+    },
     "shareLink": {
         "title": "Share Link",
         "menu": {
