--- a/apps/web/src/app/_i18n/locales/zh-TW/translation.json
+++ b/apps/web/src/app/_i18n/locales/zh-TW/translation.json
@@ -332,6 +332,11 @@
         "noData": "尚無分享內容。",
         "refresh": "重新整理"
     },
+    "shareWithMe": {
+        "title": "與我分享",
+        "noData": "尚無被分享的內容。",
+        "refresh": "重新整理"
+    },
     "shareLink": {
         "title": "分享連結",
         "menu": {
