feat(i18n): add i18n surrpot for pagination control

--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -23,6 +23,10 @@
             "day": "Day",
             "days": "Days",
             "hour": "Hour"
+        },
+        "pagination": {
+            "previous": "Previous",
+            "next": "Next"
         }
     },
     "auth": {
