--- a/apps/web/src/app/_i18n/locales/zh-TW/translation.json
+++ b/apps/web/src/app/_i18n/locales/zh-TW/translation.json
@@ -23,6 +23,10 @@
             "day": "天",
             "days": "天",
             "hour": "小時"
+        },
+        "pagination": {
+            "previous": "上一頁",
+            "next": "下一頁"
         }
     },
     "auth": {
