feat(tag): add delete tag
- Implemented delete tag feature in tag context and dropdown menus
- Added translation for this change
- Enhanced UI to show delete button on hover for unassigned tags

--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -217,7 +217,11 @@
         "tagContextMenu": {
             "tags": "Tags",
             "createTag": "Create Tag",
-            "noTags": "No tags"
+            "noTags": "No tags",
+            "messages": {
+                "tagDeleted": "Tag deleted successfully",
+                "failedToDeleteTag": "Failed to delete tag"
+            }
         },
         "recycleDialog": {
             "title": "Confirm Recycle",
