feat(ui/dicom): apply i18n to series content

--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -259,7 +259,8 @@
             "noDataToDisplay": "No {{level}} to display",
             "failedToRemoveTagAssignment": "Failed to remove tag assignment",
             "failedToAssignTag": "Failed to assign tag",
-            "loadRecycleFailed": "Failed to load recycle {{level}} data"
+            "loadRecycleFailed": "Failed to load recycle {{level}} data",
+            "loadDataFailed": "Failed to load {{level}} data"
         },
         "columns": {
             "study": {
