feat(i18n): add translation to `date-range-picker`

--- a/apps/web/src/app/_i18n/locales/en/translation.json
+++ b/apps/web/src/app/_i18n/locales/en/translation.json
@@ -332,6 +332,14 @@
                 "select": "Select {{label}}",
                 "enter": "Enter {{label}}",
                 "enterValue": "Enter value"
+            },
+            "dateRangePicker": {
+                "exact": "Exact Date",
+                "from": "From Date",
+                "to": "To Date",
+                "range": "Date Range",
+                "startDate": "Start Date",
+                "endDate": "End Date"
             }
         },
         "deleteConfirmDialog": {
