docs(fd): add DICOM Viewer chapter in core features

--- a/apps/docs/content/docs/(user-guide)/core-features/dicom-viewer.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/dicom-viewer.mdx
@@ -2,3 +2,7 @@
 title: DICOM Viewer
 description: DICOM Viewer for Brigid
 ---
+
+![DICOM Viewer preview animation](dicom-viewer.gif)
+
+Brigid integrates a professional open-source DICOM Viewer - [BlueLight Viewer](https://github.com/cylab-tw/bluelight), providing a smooth web-based medical image viewing experience.
