--- a/apps/docs/content/docs/(user-guide)/core-features/dicom-viewer.zh-TW.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/dicom-viewer.zh-TW.mdx
@@ -2,3 +2,7 @@
 title: DICOM Viewer
 description: Brigid 內建的 DICOM Viewer
 ---
+
+![DICOM Viewer preview animation](dicom-viewer.gif)
+
+Brigid 集成了專業的開源 DICOM Viewer - [BlueLight Viewer](https://github.com/cylab-tw/bluelight)，提供流暢的 Web 端醫學影像檢視體驗。
