docs(fd): add descriptions for core features pages and update index to include `further reading`

--- a/apps/docs/content/docs/(user-guide)/core-features/dicom-sharing.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/dicom-sharing.mdx
@@ -1,5 +1,6 @@
 ---
 title: DICOM Sharing
+description: Introduction to Brigid's DICOM Sharing features
 ---
 
 ![DICOM Sharing preview animation](dicom-sharing.gif)
