--- a/apps/docs/content/docs/(user-guide)/core-features/executable-application.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/executable-application.mdx
@@ -1,5 +1,6 @@
 ---
 title: Executable Application
+description: Introduction to Brigid's Executable Application features
 ---
 
 ![Executable Application preview animation](sea.gif)
