--- a/apps/docs/content/docs/(user-guide)/core-features/upload-dicom.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/upload-dicom.mdx
@@ -1,5 +1,6 @@
 ---
 title: Upload DICOM
+description: Introduction to Brigid's Upload DICOM features
 ---
 
 ![Upload DICOM preview animation](upload-dicom.gif)
