--- a/apps/docs/content/docs/(user-guide)/core-features/index.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/index.mdx
@@ -3,3 +3,13 @@ title: Core Features
 description: Core features of Brigid
 ---
 
+import { getPageTreePeers } from 'fumadocs-core/page-tree';
+import { source } from '@/lib/source';
+
+<Cards>
+  {getPageTreePeers(source.getPageTree('en'), '/en/docs/core-features').map((peer) => (
+    <Card key={peer.url} title={peer.name} href={peer.url}>
+      {peer.description}
+    </Card>
+  ))}
+</Cards>
