--- a/apps/docs/content/docs/(user-guide)/core-features/index.zh-TW.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/index.zh-TW.mdx
@@ -2,3 +2,14 @@
 title: 核心功能
 description: Brigid 的核心功能
 ---
+
+import { getPageTreePeers } from 'fumadocs-core/page-tree';
+import { source } from '@/lib/source';
+
+<Cards>
+  {getPageTreePeers(source.getPageTree('zh-TW'), '/zh-TW/docs/core-features').map((peer) => (
+    <Card key={peer.url} title={peer.name} href={peer.url}>
+      {peer.description}
+    </Card>
+  ))}
+</Cards>
