--- a/apps/docs/content/docs/(user-guide)/core-features/multi-workspaces.mdx
+++ b/apps/docs/content/docs/(user-guide)/core-features/multi-workspaces.mdx
@@ -1,5 +1,6 @@
 ---
 title: Multi-Workspaces
+description: Introduction to Brigid's Multi-Workspaces features
 ---
 
 ![Multi-Workspaces preview animation](multi-workspaces.gif)
